# drogon-api

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  config.json  config.yaml  docker-compose.yaml
include/api/controllers/: products_controller.h
scripts/linux/: build.sh  formatter.sh  setup_project.sh
scripts/windows/: formatter.bat  setup_project.bat
src/: CMakeLists.txt  main.cc
src/api/controllers/: products_controller.cc
